--- a/wingrow_ui/client/src/styles/Admin.css
+++ b/wingrow_ui/client/src/styles/Admin.css
@@ -451,19 +451,21 @@
     .admin_links {
         width: 100%;
         padding: 0;
+        display: block;
         margin: 0;
+        text-align: center;
     }
 
     .admin_links_details {
         padding: 13px 30px;
         font-size: 13px;
     }
-    .admin_link{
-        padding: 13px 30px;
+    .admin_link {
+        padding: 13px 29%;
         font-size: 13px;
     }
     .one{
-        margin-top: 30px;
+        margin: 30px 0;
     }
     .farmers-type {
         top: -5%;
