--- a/wingrow_ui/client/src/styles/Styles.css
+++ b/wingrow_ui/client/src/styles/Styles.css
@@ -128,7 +128,7 @@ li {
 
 .profile_wrapper {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -174,7 +174,8 @@ li {
   padding: 0.2xrem;
   border-radius: 10px;
 }
-.menu-link ul li:hover > a {
+
+.menu-link ul li:hover>a {
   transform-origin: left;
   text-decoration: underline;
   transition: 0.2s;
@@ -341,9 +342,11 @@ li {
   html {
     font-size: 70%;
   }
+
   .main-nav {
     grid-template-columns: 2rem 3fr 3fr 1rem;
   }
+
   .main_container {
     height: 90vh;
   }
@@ -360,9 +363,11 @@ li {
   .profile_wrapper {
     width: 80vw;
   }
+
   html {
     font-size: 68%;
   }
+
   .main-nav {
     height: 10vh;
     grid-template-columns: 0.5rem 2fr 3fr 2rem 0.5rem;
@@ -393,19 +398,21 @@ li {
   .mobile-menu-link {
     background-color: white;
     position: fixed;
-    top: 12vh;
+    top: 8vh;
+    right: 10px;
     z-index: 99;
+    height: -moz-fit-content;
     height: fit-content;
-    width: 100%;
+    width: 30%;
     display: grid;
     grid-column: 2/5;
     align-items: center;
-    justify-content: center;
     padding-bottom: 1rem;
     transform-origin: top;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  }
+    box-shadow: rgba(50, 50, 93, 0.1) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.1) 0px 30px 60px -30px;
+    justify-content: center;
+}
 
   .mobile-menu-link ul {
     height: 100%;
@@ -452,6 +459,7 @@ li {
   html {
     font-size: 65%;
   }
+
   .main-nav {
     height: 12vh;
     grid-template-columns: 1rem 2fr 1fr 1fr 1rem;
@@ -477,6 +485,7 @@ li {
     display: block;
     font-size: 2.5rem;
   }
+
   .authbox {
     width: 80vw;
     height: 80vh;
@@ -542,6 +551,7 @@ li {
     display: block;
     font-size: 2.5rem;
   }
+
   .authbox {
     width: 90vw;
     height: 80vh;
@@ -588,6 +598,7 @@ li {
   margin: auto;
   margin-bottom: 10px;
 }
+
 .textfield fieldset {
   border: 1px solid green;
 }
@@ -602,21 +613,22 @@ li {
   .textfield div {
     border-radius: 30px;
   }
+
   .form-btn {
     width: 150px;
     height: 40px;
     border-radius: 20px !important;
-    background: linear-gradient(
-      90deg,
-      rgba(7, 149, 43, 1) 41%,
-      rgba(13, 106, 2, 1) 100%
-    );
+    background: linear-gradient(90deg,
+        rgba(7, 149, 43, 1) 41%,
+        rgba(13, 106, 2, 1) 100%);
   }
+
   .box {
     border-radius: 5px !important;
     width: 90%;
     padding: 5px;
   }
+
   .terms_and_conditions {
     padding: 10px;
     border: 1px solid #80bb65;
@@ -635,4 +647,143 @@ li {
 
 .form-heading {
   margin: auto !important;
+}
+
+
+.forgot-main-container {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.forgot-form-outer {
+  width: 400px;
+  height: 450px;
+  border: 1px solid green;
+  border-radius: 79px 0px 81px 0px;
+  -webkit-border-radius: 79px 0px 81px 0px;
+  -moz-border-radius: 79px 0px 81px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.forgot-form-inner h3{
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  margin:  0 0 10px;
+}
+
+.forgot-input {
+  font-size: 15px;
+  padding: 20px 40px;
+  margin: 10px;
+  border: 1px solid #3AA54B;
+  display: block;
+  margin: 0 auto 10px;
+  border-radius: 5px
+  ;
+}
+
+.forgot-btn {
+  width: 140px;
+  height: 50px;
+  color: #fff;
+  border: none;
+  background: linear-gradient(105.42deg, #3AA54B 33.61%, #107C55 80.31%);
+  border-radius: 50px;
+  margin: 0 auto 10px;
+}
+
+.congrats-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 90vh;
+}
+
+.congrats{
+  text-align: center;
+}
+
+.congrats-heading{
+font-style: normal;
+font-weight: 700;
+font-size: 8rem;
+line-height: 128.91%;
+  font-family: 'Roboto', sans-serif;
+  margin: 10px;
+  background: linear-gradient(105.42deg, #3AA54B 33.61%, #107C55 80.31%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.next-int{
+  font-family: 'Roboto', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 2rem;
+line-height: 128.91%;
+margin: 10px;
+/* text-transform: capitalize; */
+}
+
+.next{
+  width: 180px;
+height: 45px;
+background: linear-gradient(105.42deg, #3AA54B 33.61%, #107C55 80.31%);
+margin: 15px auto !important;
+    font-size: 20px !important;
+    color: white !important;
+    border-radius: 30px !important;
+}
+
+.congrats-img{
+  width: 600px;
+}
+
+@media (max-width: 520px) {
+  .forgot-main-container {
+    height: 90vh;
+}
+.forgot-form-inner h3 {
+  font-size: 15px;
+}
+
+.forgot-input {
+  font-size: 14px;
+  padding: 15px 40px;
+  border-radius: 30px;
+}
+.forgot-btn {
+  width: 110px;
+  height: 40px;
+}
+.forgot-form-outer {
+  width: 310px;
+  height: 450px;
+}
+.congrats-img {
+  width: 400px;
+}
+.congrats-heading {
+  font-size: 5rem;
+}
+.next-int {
+    font-size: 1.5rem;
+}
+.divider{
+  width: 80%;
+  margin: auto;
+}
+.next {
+  width: 150px;
+  height: 40px;
+  font-size: 15px !important;
+}
 }
