--- a/wingrow_ui/client/src/styles/Styles.css
+++ b/wingrow_ui/client/src/styles/Styles.css
@@ -652,16 +652,17 @@ li {
 
 .forgot-main-container {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background: #00c4000a;
 }
 
 .forgot-form-outer {
   width: 400px;
-  height: 450px;
+  height: fit-content;
   border: 1px solid green;
   border-radius: 79px 0px 81px 0px;
   -webkit-border-radius: 79px 0px 81px 0px;
@@ -669,6 +670,11 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: -4px 12px 40px -12px rgba(3,179,80,0.49);
+-webkit-box-shadow: -4px 12px 40px -12px rgba(3,179,80,0.49);
+-moz-box-shadow: -4px 12px 40px -12px rgba(3,179,80,0.49);
 }
 
 .forgot-form-inner h3{
@@ -680,13 +686,12 @@ li {
 
 .forgot-input {
   font-size: 15px;
-  padding: 20px 40px;
+  padding: 20px 40px 20px 15px;
   margin: 10px;
   border: 1px solid #3AA54B;
   display: block;
   margin: 0 auto 10px;
-  border-radius: 5px
-  ;
+  border-radius: 5px;
 }
 
 .forgot-btn {
@@ -747,9 +752,41 @@ margin: 15px auto !important;
   width: 600px;
 }
 
+.resetPassword-heading{
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.restpassword-img{
+  width: 200px;
+}
+
+.feedback-container{
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-para {
+  font-size: 25px;
+  text-align: center;
+  line-height: 40px;
+  margin: 0 0 30px 0;
+}
+
+.stars {
+  width: fit-content;
+  margin: auto;
+  border: 1px solid rgba(58, 165, 75, 1);
+  padding: 10px 30px;
+  border-radius: 40px;
+}
+
 @media (max-width: 520px) {
   .forgot-main-container {
-    height: 90vh;
+    height: 92vh;
 }
 .forgot-form-inner h3 {
   font-size: 15px;
@@ -757,7 +794,7 @@ margin: 15px auto !important;
 
 .forgot-input {
   font-size: 14px;
-  padding: 15px 40px;
+  padding: 15px 40px 15px 20px;
   border-radius: 30px;
 }
 .forgot-btn {
@@ -766,7 +803,7 @@ margin: 15px auto !important;
 }
 .forgot-form-outer {
   width: 310px;
-  height: 450px;
+  height: fit-content;
 }
 .congrats-img {
   width: 400px;
@@ -786,4 +823,29 @@ margin: 15px auto !important;
   height: 40px;
   font-size: 15px !important;
 }
+
+.resetPassword-heading {
+  font-size: 25px;
+  margin-bottom: 25px;
+}
+
+.restpassword-img {
+  width: 150px;
+}
+
+.feedback-para {
+  font-size: 15px;
+  text-align: center;
+  line-height: 20px;
+  margin: 0px 0 15px 0;
+}
+
+textarea[name="feedback"]{
+  border: 1px solid rgb(169, 169, 169) !important;
+    border-radius: 5px !important;
+    width: 300px !important;
+    min-height: 200px !important;
+    font-size: 15px !important;
+}
+
 }
