--- a/wingrow_ui/client/src/styles/AdvanceBookings.css
+++ b/wingrow_ui/client/src/styles/AdvanceBookings.css
@@ -1,19 +1,18 @@
-.advance_main_container{
+.advance_main_container {
     width: 100%;
-    min-height: 80vh;
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 6rem;
+    padding: 4rem;
 }
 
 
-.advance_component{
+.advance_component {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin: 20px 0;
 }
 
 .advance_date{
@@ -21,4 +20,25 @@
     justify-content: center;
     align-items: flex-start;
     margin-right: 20px;
+}
+
+.select_market {
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    /* min-height: fit-content; */
+}
+
+.select_market h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+
+.show{
+    display: block;
+}
+
+.hide {
+    display: none;
 }
