--- a/wingrow_ui/client/src/styles/Farmer.css
+++ b/wingrow_ui/client/src/styles/Farmer.css
@@ -10,11 +10,11 @@
 
 .farmers_navigate {
   position: fixed;
-  left: 0;
+  left: 0px;
   bottom: 0;
   margin-top: 13vh;
   z-index: 1000;
-  min-height: 87vh;
+  min-height: 90vh;
   width: 20%;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   display: flex;
@@ -22,19 +22,20 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
+  padding: 0px 50px;
 }
 
 .links_farmersdata {
   width: 100%;
-  height: 5rem;
   text-align: center;
   text-decoration: none;
-  margin: 2rem 0;
+  margin: 1rem 1rem;
+  padding: 50px 55px;
   font-size: 1.5rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  border-radius: 10px;
   transition: all 0.2s ease;
-  color: black;
+  color: #fff;
+  font-size: 20px;
 }
 
 .links_farmersdata:active {
@@ -154,10 +155,10 @@ margin-top: 15px;
 
 .close_btn {
   position: absolute;
-  right: 0;
+  right: 0px;
   top: 50%;
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   padding: 0.5rem;
 }
@@ -508,6 +509,15 @@ margin-top: 15px;
 sup {
   font-size: 15px;
   color: red;
+}
+
+
+.red{
+  background: linear-gradient(91.3deg, #E03538 17.31%, #C4094C 88.09%);
+}
+
+.green{
+  background: linear-gradient(105.42deg, #3AA54B 33.61%, #107C55 80.31%);
 }
 
 @media (max-width: 550px) {
